Updated ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,16 @@
 /bin/classes/com/placella/bmi/R$string.class
 /bin/classes/com/placella/bmi/R$style.class
 /gen/com/placella/bmi/R.java
+/bin/BMI.apk
+/bin/classes.dex
+/bin/res/drawable-hdpi/ic_action_search.png
+/bin/res/drawable-hdpi/ic_launcher.png
+/bin/res/drawable-ldpi/ic_launcher.png
+/bin/res/drawable-mdpi/ic_action_search.png
+/bin/res/drawable-mdpi/ic_launcher.png
+/bin/res/drawable-xhdpi/ic_action_search.png
+/bin/res/drawable-xhdpi/ic_launcher.png
+/bin/resources.ap_
+/bin/classes/com/placella/bmi/R$color.class
+/bin/classes/com/placella/bmi/DataInput$1$1.class
+/bin/classes/com/placella/bmi/Output.class
