Added link to source code in the menu

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /bin/classes/com/placella/bmi/R$color.class
 /bin/classes/com/placella/bmi/DataInput$1$1.class
 /bin/classes/com/placella/bmi/Output.class
+/bin/classes/com/placella/bmi/MenuHandler.class
