--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,26 +2,23 @@
     package="com.placella.bmi"
     android:versionCode="1"
     android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="8"
+    <uses-sdk android:minSdkVersion="8"
         android:targetSdkVersion="15" />
-
-    <application
-        android:icon="@drawable/ic_launcher"
+    <application android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".MainActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="DataInput"></activity>
-        <activity android:name="Output"></activity>
+        <activity android:name="DataInput"
+            android:label="@string/title_activity_main" >
+        </activity>
+        <activity android:name="Output"
+            android:label="@string/title_activity_main" >
+        </activity>
     </application>
-
 </manifest>
