--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@
 /bin/classes/com/placella/bmi/DataInput$1$1.class
 /bin/classes/com/placella/bmi/Output.class
 /bin/classes/com/placella/bmi/MenuHandler.class
+/bin/classes/com/placella/bmi/MessageDialog.class
+/bin/jarlist.cache
+/bin/res/drawable-hdpi/ic_bar.png
+/bin/res/drawable-hdpi/ic_marker.png
+/bin/res/drawable-ldpi/ic_bar.png
+/bin/res/drawable-ldpi/ic_marker.png
+/bin/res/drawable-mdpi/ic_bar.png
+/bin/res/drawable-mdpi/ic_marker.png
+/bin/res/drawable-xhdpi/ic_bar.png
+/bin/res/drawable-xhdpi/ic_marker.png
