Dropped unused resources

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /bin/res/drawable-mdpi/ic_marker.png
 /bin/res/drawable-xhdpi/ic_bar.png
 /bin/res/drawable-xhdpi/ic_marker.png
+/bin/classes/com/placella/bmi/R$integer.class
