--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,7 @@
     package="com.placella.bmi"
     android:versionCode="1"
     android:versionName="1.0" >
-    <uses-sdk android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="16"/>
     <application android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -18,6 +17,9 @@
             android:label="@string/title_activity_main" >
         </activity>
         <activity android:name="Output"
+            android:label="@string/title_activity_main" >
+        </activity>
+        <activity android:name="LinkList"
             android:label="@string/title_activity_main" >
         </activity>
     </application>
